# xswl-MAF-demo

./: .env.example  .gitignore  OLLAMA_SUPPORT.md  README.md  VLLM_FIX_SUMMARY.md  pyproject.toml
.github/: copilot-instructions.md
examples/: .env.vllm  README.md  concurrent_devflow.py  custom_workflow.py  direct_client_example.py  minimal_devflow.py  multi_model_example.py  ollama_example.py  quick_vllm.py  tools_enabled_example.py  vllm_example.py
src/maf_devflow/: __init__.py  agents.py  cli.py  config.py  tooling.py  workflow.py
src/maf_devflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_workflow.py
